src/objects/Driver__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Mexican</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TwitterHandle__c</fullName>
        <externalId>true</externalId>
        <label>Twitter Handle</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Driver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>